@@ -15,6 +15,7 @@
 
 """UI tests for the test framework."""
 
+import signal
 import sys
 
 import bzrlib
@@ -172,6 +173,49 @@ class TestRunBzrCaptured(ExternalBase):
                                       retcode=3)[1]
         self.assertContainsRe(err, 'No known merge type magic merge')
 
+    def test_start_and_stop_bzr_subprocess(self):
+        """We can start and perform other test actions while that process is
+        still alive.
+        """
+        process = self.start_bzr_subprocess('--version')
+        result = self.finish_bzr_subprocess(process)
+        self.assertContainsRe(result[0], 'is free software')
+        self.assertEqual('', result[1])
+
+    def test_start_and_stop_bzr_subprocess_with_error(self):
+        """finish_bzr_subprocess allows specification of the desired exit code.
+        """
+        process = self.start_bzr_subprocess('--versionn')
+        result = self.finish_bzr_subprocess(process, retcode=3)
+        self.assertEqual('', result[0])
+        self.assertContainsRe(result[1], 'unknown command')
+
+    def test_start_and_stop_bzr_subprocess_ignoring_retcode(self):
+        """finish_bzr_subprocess allows the exit code to be ignored."""
+        process = self.start_bzr_subprocess('--versionn')
+        result = self.finish_bzr_subprocess(process, retcode=None)
+        self.assertEqual('', result[0])
+        self.assertContainsRe(result[1], 'unknown command')
+
+    def test_start_and_stop_bzr_subprocess_with_unexpected_retcode(self):
+        """finish_bzr_subprocess raises self.failureException if the retcode is
+        not the expected one.
+        """
+        process = self.start_bzr_subprocess('--versionn')
+        self.assertRaises(self.failureException, self.finish_bzr_subprocess,
+                          process, retcode=0)
+        
+    def test_start_and_stop_bzr_subprocess_send_signal(self):
+        """finish_bzr_subprocess raises self.failureException if the retcode is
+        not the expected one.
+        """
+        process = self.start_bzr_subprocess('wait-until-signalled')
+        self.assertEqual('running\n', process.stdout.readline())
+        result = self.finish_bzr_subprocess(process, send_signal=signal.SIGINT,
+                                            retcode=3)
+        self.assertEqual('', result[0])
+        self.assertEqual('bzr: interrupted\n', result[1])
+        
 
 class TestRunBzrError(ExternalBase):
 
